# eoi-django-alberto

./: .gitignore  pyproject.toml
eoi/: db.sqlite3
eoi/blog/: admin.py  models.py  tests.py  views.py
eoi/blog/migrations/: 0001_initial.py  0002_post_slug.py
eoi/eoi/: settings.py  urls.py
eoi/templates/blog/: list.html
