[tool.poetry]
name = "eoi-django-alberto"
version = "0.1.0"
description = ""
authors = ["Alberto Rodriguez <Esoeso>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
ipython = "^7.18.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
